# drawbot_sketches

./: .gitignore  Pipfile  README.md  draw_161112.py  draw_161113.py  draw_161115.py  draw_161116.py  draw_161212.py  draw_170501.py  draw_170502_a.py  draw_170502_b.py  draw_170502_c.py  draw_170503_b.py  draw_170503_c.py  draw_170503_d.py  draw_170503_e.py  draw_170504.py  draw_170505.py  draw_170508.py  draw_170509_b.py  draw_170509_c.py  draw_190114.py  draw_sample.py  pyproject.toml  sketch_helper.py
1611/: draw_161112.py  draw_161115.py
1704/: draw_170426.py
1705/: draw_170501.py  draw_170503_a.py  draw_170503_d.py  draw_170504_b.py  draw_170506.py  draw_170509_a.py
1706/: draw_170619.py
1711/: draw_171102_a.py  draw_171103_a.py  draw_171103_b.py  draw_171104_a.py
1808/: draw_180819_a.py
1812/: draw_181231_a.py
1901/: draw_190114.py
1904/: draw_190420a.py
1905/: draw_190531a.py
1906/: draw_190601a.py
1912/: draw_191229.py
2017/1705/: draw_170503_e.py  draw_170503_f.py  draw_170508.py  draw_170509_c.py
2017/1711/: draw_171102_a.py  draw_171103_b.py  draw_171104_a.py
2018/1812/: draw_181227_a.py
2019/1901/: draw_190114a.py
2019/1904/: draw_190420a.py
2019/1905/: draw_190531a.py
2019/1906/: draw_190601a.py
2020/2003/: draw_200316.py  draw_200316a.py  draw_200317a.py  draw_200319a.py
2020/2006/: draw_200630a.py
2020/2007/: draw_200701a.py  draw_200701b.py
2021/2105/: draw_210501a.py
2021/2106/: draw_210627a.py
2021/2110/: draw_211004a.py
modules/: matrix_calc.py  particle.py  sketch_helper.py  triangle.py  vector.py
(+1 files in other folders)
