[tool.poetry]
name = "drawbot_sketches"
version = "0.1.0"
description = ""
authors = ["Shin Chu <cougousei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
drawbot = {git = "https://github.com/typemytype/drawbot"}
numpy = "^1.20.2"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]
jedi = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
